# second-project

./: .gitmodules  README.md  index.html  js.js  style.css
zadanie2/task_2/: CMakeLists.txt  main.cpp
zadanie2/task_2/include/: CMakeLists.txt  funct.cpp
zadanie2/task_2/src/Functions/: funct.h
zadaniya/task_3/: CMakeLists.txt  main.cpp  tests.cpp
zadaniya/task_3/include/Functions/: funct.h
zadaniya/task_3/src/: CMakeLists.txt  funct.cpp
